Update API base URL to api.peepal.dev and enable interactive playground
- Add servers section to OpenAPI spec with production URL
- Configure interactive API playground in docs.json
- Update all documentation examples to use api.peepal.dev
- Enable API key authentication (x-api-key header) for playground

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -16,7 +16,7 @@ Your API key determines the project context, so you do not include a project ID 
 Create a job with a person seed and at least one claim.
 
 ```bash
-BASE_URL="https://api.example.com"
+BASE_URL="https://api.peepal.dev"
 API_KEY="peepal_key_123"
 
 curl -X POST "$BASE_URL/v1/jobs" \
