--- a/concepts/claims.mdx
+++ b/concepts/claims.mdx
@@ -50,7 +50,7 @@ Use `match_rules` and `weight` to tune matching behavior and scoring.
 
 ## Claim results
 
-Each claim result includes a status and confidence score.
+Each claim result includes a status and confidence score (1-5, where 5 is highest).
 
 - `verified`
 - `not_verified`
